// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroupPassFail render 1`] = `
<div
  className="choiceGroupContainer"
>
  <StyledChoiceGroup
    componentRef={[Function]}
    isLabelVisible={false}
    onChange={[Function]}
    options={
      [
        {
          "ariaLabel": "Pass",
          "key": "pass",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionPass",
            "root": "radioButtonOption",
          },
          "text": "Pass",
        },
        {
          "ariaLabel": "Fail",
          "key": "fail",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionFail",
            "root": "radioButtonOption",
          },
          "text": "Fail",
        },
      ]
    }
    selectedKey="unknown"
    styles={
      {
        "flexContainer": "radioButtonGroup",
      }
    }
  />
  <div
    className="secondaryControlsWrapper"
  >
    <CustomizedIconButton
      aria-label="add"
      iconProps={
        {
          "iconName": "add",
        }
      }
      noClick={[Function]}
    />
  </div>
</div>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to FAIL 1`] = `
<div
  className="choiceGroupContainer"
>
  <StyledChoiceGroup
    componentRef={[Function]}
    isLabelVisible={false}
    onChange={[Function]}
    options={
      [
        {
          "ariaLabel": "Pass",
          "key": "pass",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionPass",
            "root": "radioButtonOption",
          },
          "text": "Pass",
        },
        {
          "ariaLabel": "Fail",
          "key": "fail",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionFail",
            "root": "radioButtonOption",
          },
          "text": "Fail",
        },
      ]
    }
    selectedKey="fail"
    styles={
      {
        "flexContainer": "radioButtonGroup",
      }
    }
  />
  <div
    className="secondaryControlsWrapper"
  >
    <CustomizedIconButton
      ariaLabel="undo"
      iconProps={
        {
          "iconName": "undo",
        }
      }
      onClick={[Function]}
    />
    <CustomizedIconButton
      aria-label="add"
      iconProps={
        {
          "iconName": "add",
        }
      }
      noClick={[Function]}
    />
  </div>
</div>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to PASS 1`] = `
<div
  className="choiceGroupContainer"
>
  <StyledChoiceGroup
    componentRef={[Function]}
    isLabelVisible={false}
    onChange={[Function]}
    options={
      [
        {
          "ariaLabel": "Pass",
          "key": "pass",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionPass",
            "root": "radioButtonOption",
          },
          "text": "Pass",
        },
        {
          "ariaLabel": "Fail",
          "key": "fail",
          "onRenderLabel": [Function],
          "styles": {
            "field": "radioButtonOptionField radioButtonOptionFail",
            "root": "radioButtonOption",
          },
          "text": "Fail",
        },
      ]
    }
    selectedKey="pass"
    styles={
      {
        "flexContainer": "radioButtonGroup",
      }
    }
  />
  <div
    className="secondaryControlsWrapper"
  >
    <CustomizedIconButton
      ariaLabel="undo"
      iconProps={
        {
          "iconName": "undo",
        }
      }
      onClick={[Function]}
    />
    <CustomizedIconButton
      aria-label="add"
      iconProps={
        {
          "iconName": "add",
        }
      }
      noClick={[Function]}
    />
  </div>
</div>
`;
